remove DimensionWrapper